# sm

./: .gitignore  README.md  package.json
public/: index.html
src/: App.tsx  index.tsx
src-tauri/: .env  Cargo.toml  file.db  tauri.conf.json
src-tauri/migrations/2021-02-22-233755_file_details/: down.sql  up.sql
src-tauri/src/: db.rs  main.rs  models.rs  schema.rs  tauri_bus.rs
src/components/: FileList.tsx  Navigation.tsx
src/utils/: fileUtils.ts
