[package]
name = "sm"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "sm"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
anyhow = "1.0.38"
notify = "5.0.0-pre.6"
diesel = { version = "1.4.5", features = [ "sqlite", "r2d2" ] }
diffy = "0.2.1"
dotenv = "0.15.0"
crossbeam = "0.8.0"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "sm"
path = "src/main.rs"
